# ai-ta

./: .env.example  .gcloudignore  .gitignore  DEPLOYMENT.md  Dockerfile  GMAIL_SETUP.md  Makefile  README.md  SENDGRID_SETUP.md  agent_service.py  api_server.py  database.py  email_service.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml
docs/: GMAIL_SETUP.md  future_features.md
examples/: Coding_Heavy_Lab.ipynb  Math_Heavy_Lab.ipynb  Quiz_Example.ipynb
src/: agent.py  agent_service.py  aita_exceptions.py  api_server.py  auth.py  config.py  database.py  drive_utils.py  email_service.py  exceptions.py  firestore_service.py  instructor_dashboard_html.py  models.py  pdf_utils.py  rag.py  rate_limiter.py  storage_utils.py
tests/: conftest.py  test_agent_service.py  test_api_endpoints.py  test_auth.py  test_database.py  test_drive_utils.py  test_email_service.py  test_exceptions.py  test_firestore_service.py  test_instructor_dashboard.py  test_models.py  test_pdf_database.py  test_pdf_endpoints.py  test_pdf_utils.py  test_rag.py  test_rate_limiter.py  test_storage_utils.py
